# diffusion-rgbd

./: .gitignore  README.md  modal_app.py  prompts.txt  pyproject.toml  requirements.txt
configs/: depth_only.yaml  early_fusion_rgbd.yaml  rgb_only.yaml  segformer_b2_fusion_rgbd.yaml  segformer_b2_latent_restoration_full_consistency.yaml  segformer_b2_latent_restoration_no_consistency.yaml  smoke_dummy.yaml  transformer_fusion_rgbd.yaml
docs/: milestone3_baseline_plan.md
results/: depth_baseline.txt  rgb_baseline.txt  rgbd_baseline.txt
scripts/: download_nyuv2_meta.py  eval_baseline.py  evaluate.py  export_qualitative.py  make_dummy_nyuv2.py  run_eval_matrix.py  summarize_results.py  train.py  train_baseline.py  visualize_results.py
src/diffusion_rgbd/: __init__.py  config.py  corruptions.py  losses.py  metrics.py  pipeline.py
src/diffusion_rgbd/data/: builder.py  nyuv2_mat.py
src/diffusion_rgbd/models/: __init__.py  builder.py  dual_stream_unet.py  fusion_segmenter.py  restoration_segmenter.py  segformer_fusion.py  simple_unet.py
src/diffusion_rgbd/utils/: __init__.py
tests/: test_corruptions.py  test_metrics.py
