[project]
name = "diffusion-rgbd"
version = "0.1.0"
description = "Baseline testing scaffold for robust RGB-D semantic segmentation on NYUv2."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.24",
  "pillow>=10",
  "pyyaml>=6",
  "h5py>=3.10",
  "scipy>=1.11",
  "tqdm>=4.66",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
